back end produto e ajuste chat

--- a/views/AnunciarProduto.html
+++ b/views/AnunciarProduto.html
@@ -11,6 +11,7 @@
 	<link rel="stylesheet" type="text/css" href="css/nav.css">
 	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css"/>
 	<script src="utils.js"></script>
+	<script src="produtos.js"></script>
 </head>
 <body>
 
