--- a/views/css/ProdutoDetalhe.css
+++ b/views/css/ProdutoDetalhe.css
@@ -32,12 +32,13 @@ body {
 }
 
 .col-2 img {
-    max-width: 100%;
+    max-width: 350px;
+    max-height: 400px;
     padding: 50px 0;
 }
 
 .small-img-col{
-    flex-basis: 24%;
+    flex-basis: 20%;
     cursor: pointer;
 }
 
