--- a/views/Home.html
+++ b/views/Home.html
@@ -12,7 +12,6 @@
 	<link rel="stylesheet" type="text/css" href="css/nav.css">
 	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css"/>
 	<script src="utils.js"></script>
-    <script src="home.js"></script>
 </head>
 <body>
 
@@ -43,7 +42,7 @@
 	 </nav>
 
      <div class="produtos" id="produtos">
-		<div class="card" onclick="goDetail()">
+		<!-- <div class="card" onclick="goDetail(3)">
 			<img class="img-produto" src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcROI274TIa55J22WFMfjpxGZILDIrk6zCXjvA&usqp=CAU"/> 
 			<span class="desconto">-20%</span>
 			<div class="panel">
@@ -63,112 +62,8 @@
 				</div>
 				<strong class="preco"> R$ 49,90 </strong>
 			</div>
-		</div>
-		<div class="card" onclick="goDetail()">
-			<img class="img-produto" src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcROI274TIa55J22WFMfjpxGZILDIrk6zCXjvA&usqp=CAU"/> 
-			<span class="desconto"></span>
-			<div class="panel">
-				<a href="#" class="fas fa-heart"></a>
-				<a href="#" class="fas fa-share"></a>
-				<a href="#" class="fas fa-search"></a>
-			</div>
-			<a href="#"><button>Adicionar ao carrinho</button></a>
-			<div class="info">
-				<h3>Calça</h3>
-				<div class="stars">
-					<i class="fas fa-star"></i>
-					<i class="fas fa-star"></i>
-					<i class="fas fa-star"></i>
-					<i class="fas fa-star"></i>
-					<i class="fas fa-star-half-alt"></i>
-				</div>
-				<strong class="preco"> R$ 79,90  </strong>
-			</div>
-		</div>
-		<div class="card" onclick="goDetail()">
-			<img class="img-produto" src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcROI274TIa55J22WFMfjpxGZILDIrk6zCXjvA&usqp=CAU"/> 
-			<span class="desconto"></span>
-			<div class="panel">
-				<a href="#" class="fas fa-heart"></a>
-				<a href="#" class="fas fa-share"></a>
-				<a href="#" class="fas fa-search"></a>
-			</div>
-			<a href="#"><button>Adicionar ao carrinho</button></a>
-			<div class="info">
-				<h3>Short</h3>
-				<div class="stars">
-					<i class="fas fa-star"></i>
-					<i class="fas fa-star"></i>
-					<i class="fas fa-star"></i>
-					<i class="fas fa-star"></i>
-					<i class="fas fa-star-half-alt"></i>
-				</div>
-				<strong class="preco"> R$ 49,90  </strong>
-			</div>
-		</div>
-		<div class="card" onclick="goDetail()">
-			<img class="img-produto" src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcROI274TIa55J22WFMfjpxGZILDIrk6zCXjvA&usqp=CAU"/> 
-			<span class="desconto">-100%</span>
-			<div class="panel">
-				<a href="#" class="fas fa-heart"></a>
-				<a href="#" class="fas fa-share"></a>
-				<a href="#" class="fas fa-search"></a>
-			</div>
-			<a href="#"><button>Adicionar ao carrinho</button></a>
-			<div class="info">
-				<h3>Regata</h3>
-				<div class="stars">
-					<i class="fas fa-star"></i>
-					<i class="fas fa-star"></i>
-					<i class="fas fa-star"></i>
-					<i class="fas fa-star"></i>
-					<i class="fas fa-star-half-alt"></i>
-				</div>
-				<strong class="preco"> R$ 49,90  </strong>
-			</div>
-		</div>
-		<div class="card" onclick="goDetail()">
-			<img class="img-produto" src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcROI274TIa55J22WFMfjpxGZILDIrk6zCXjvA&usqp=CAU"/> 
-			<span class="desconto"></span>
-			<div class="panel">
-				<a href="#" class="fas fa-heart"></a>
-				<a href="#" class="fas fa-share"></a>
-				<a href="#" class="fas fa-search"></a>
-			</div>
-			<a href="#"><button>Adicionar ao carrinho</button></a>
-			<div class="info">
-				<h3>brinquedo</h3>
-				<div class="stars">
-					<i class="fas fa-star"></i>
-					<i class="fas fa-star"></i>
-					<i class="fas fa-star"></i>
-					<i class="fas fa-star"></i>
-					<i class="fas fa-star-half-alt"></i>
-				</div>
-				<strong class="preco"> R$ 49,90  </strong>
-			</div>
-		</div>
-		<div class="card" onclick="goDetail()">
-			<img class="img-produto" src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcROI274TIa55J22WFMfjpxGZILDIrk6zCXjvA&usqp=CAU"/> 
-			<span class="desconto"></span>
-			<div class="panel">
-				<a href="#" class="fas fa-heart"></a>
-				<a href="#" class="fas fa-share"></a>
-				<a href="#" class="fas fa-search"></a>
-			</div>
-			<a href="#"><button>Adicionar ao carrinho</button></a>
-			<div class="info">
-				<h3>Computador</h3>
-				<div class="stars">
-					<i class="fas fa-star"></i>
-					<i class="fas fa-star"></i>
-					<i class="fas fa-star"></i>
-					<i class="fas fa-star"></i>
-					<i class="fas fa-star-half-alt"></i>
-				</div>
-				<strong class="preco"> R$ 4999,90  </strong>
-			</div>
-		</div>
+		</div> -->
+		
     </div><!--produtos-->
 
 
@@ -217,5 +112,6 @@
 	<script src="https://code.jquery.com/jquery-3.2.1.slim.min.js"></script>
 	<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js"></script>
 	<script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js"></script>
+    <script src="home.js"></script>
 </body>
 </html>
