--- a/views/Perfil.html
+++ b/views/Perfil.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
 	<meta charset="UTF-8">
-	<title>Account Settings</title>
+	<title>Perfil</title>
 	<meta content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no" name="viewport">
 	<link href='https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css' rel='stylesheet'>
     <link href='https://cdnjs.cloudflare.com/ajax/libs/MaterialDesign-Webfont/3.6.95/css/materialdesignicons.css' rel='stylesheet'>
@@ -11,6 +11,7 @@
 	<link rel="stylesheet" type="text/css" href="css/nav.css">
 	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css"/>
 	<script src="utils.js"></script>
+	<script src="usuario.js"></script>
 </head>
 <body>
 
@@ -45,8 +46,8 @@
         <div class="padding">
             <div class="row container d-flex justify-content-center">
                 <div class="col-xl-12 col-md-12">
-                    <div class="card user-card-full">
-                        <div class="row m-l-0 m-r-0">
+                    <div class="card user-card-full" id="user-card">
+                        <!-- <div class="row m-l-0 m-r-0">
                             <div class="col-sm-4 bg-c-lite-green user-profile">
                                 <div class="card-block text-center text-white">
                                     <div class="m-b-25"> <img src="https://img.icons8.com/bubbles/100/000000/user.png" class="img-radius" alt="User-Profile-Image"> </div>
@@ -90,7 +91,7 @@
                                     </ul>
                                 </div>
                             </div>
-                        </div>
+                        </div> -->
                     </div>
                 </div>
             </div>
@@ -99,6 +100,10 @@
      
 
 	<script>
+		window.onload = function() {
+			getUser();
+		};
+
 		var nav = document.getElementById("nav-items");
 		var btn = document.getElementById("entrarSair");
 		if (localStorage.getItem("username")){
