--- a/views/EditarPerfil.html
+++ b/views/EditarPerfil.html
@@ -162,105 +162,216 @@
 					</div>
 					<div class="tab-pane fade" id="security" role="tabpanel" aria-labelledby="security-tab">
 						<h3 class="mb-4">Endereços</h3>
-						<form>
-							<div class="form-container">
-								<div class="row">
-									<div class="col-md-6">
-										<div class="form-group">
-											<label>CEP</label>
-											<input type="text" class="form-control" value="" name="first-name">
+						<button type="button" class="collapsible">Endereço 1</button>
+						<div class="contentEndereco">
+							<form>
+								<div class="form-container">
+									<div class="row">
+										<div class="col-md-6">
+											<div class="form-group">
+												<label>CEP</label>
+												<input type="text" class="form-control" value="" name="first-name">
+											</div>
 										</div>
+									</div>
+									<div class="row">
+										<div class="col-md-6">
+											<div class="form-group">
+												<label>Logradouro</label>
+												<input type="text" class="form-control" value="" name="last-name">
+											</div>
+										</div>
+										<div class="col-md-6">
+											<div class="form-group">
+												<label>Bairro</label>
+												<input type="text" class="form-control" value="" name="cvc">
+											</div>
+										</div>
+										<div class="col-md-6">
+											<div class="form-group">
+												<label>N°</label>
+												<input type="text" class="form-control" value="" name="number">
+											</div>
+										</div>
+										<div class="col-md-6">
+											<div class="form-group">
+												<label>Complemento</label>
+												<input type="text" class="form-control" value="" name="expiry">
+											</div>
+										</div>
+										<div class="col-md-6">
+											<div class="form-group">
+												<label>Cidade</label>
+												<input type="text" class="form-control" value="" name="number">
+											</div>
+										</div>
+										<div class="col-md-6">
+											<div class="form-group">
+												<label>Estado</label>
+												<input type="text" class="form-control" value="" name="expiry">
+											</div>
+										</div>
+										<div class="card-wrapper"></div>
 									</div>
 								</div>
-								<div class="row">
-									<div class="col-md-6">
-										<div class="form-group">
-											<label>Logradouro</label>
-											<input type="text" class="form-control" value="" name="last-name">
-										</div>
-									</div>
-									<div class="col-md-6">
-										<div class="form-group">
-											<label>Bairro</label>
-											<input type="text" class="form-control" value="" name="cvc">
-										</div>
-									</div>
-									<div class="col-md-6">
-										<div class="form-group">
-											<label>N°</label>
-											<input type="text" class="form-control" value="" name="number">
-										</div>
-									</div>
-									<div class="col-md-6">
-										<div class="form-group">
-											<label>Complemento</label>
-											<input type="text" class="form-control" value="" name="expiry">
-										</div>
-									</div>
-									<div class="col-md-6">
-										<div class="form-group">
-											<label>Cidade</label>
-											<input type="text" class="form-control" value="" name="number">
-										</div>
-									</div>
-									<div class="col-md-6">
-										<div class="form-group">
-											<label>Estado</label>
-											<input type="text" class="form-control" value="" name="expiry">
-										</div>
-									</div>
-									<div class="card-wrapper"></div>
+								<div>
+									<button class="btn btn-primary">Atualizar</button>
+									<button class="btn btn-light">Cancelar</button>
 								</div>
-							</div>
-						</form>
-						<div>
-							<button class="btn btn-primary">Atualizar</button>
-							<button class="btn btn-light">Cancelar</button>
+							</form>
+						</div>
+						<hr>
+						<button type="button" class="collapsible">Endereço 2</button>
+						<div class="contentEndereco">
+							<form>
+								<div class="form-container">
+									<div class="row">
+										<div class="col-md-6">
+											<div class="form-group">
+												<label>CEP</label>
+												<input type="text" class="form-control" value="" name="first-name">
+											</div>
+										</div>
+									</div>
+									<div class="row">
+										<div class="col-md-6">
+											<div class="form-group">
+												<label>Logradouro</label>
+												<input type="text" class="form-control" value="" name="last-name">
+											</div>
+										</div>
+										<div class="col-md-6">
+											<div class="form-group">
+												<label>Bairro</label>
+												<input type="text" class="form-control" value="" name="cvc">
+											</div>
+										</div>
+										<div class="col-md-6">
+											<div class="form-group">
+												<label>N°</label>
+												<input type="text" class="form-control" value="" name="number">
+											</div>
+										</div>
+										<div class="col-md-6">
+											<div class="form-group">
+												<label>Complemento</label>
+												<input type="text" class="form-control" value="" name="expiry">
+											</div>
+										</div>
+										<div class="col-md-6">
+											<div class="form-group">
+												<label>Cidade</label>
+												<input type="text" class="form-control" value="" name="number">
+											</div>
+										</div>
+										<div class="col-md-6">
+											<div class="form-group">
+												<label>Estado</label>
+												<input type="text" class="form-control" value="" name="expiry">
+											</div>
+										</div>
+										<div class="card-wrapper"></div>
+									</div>
+								</div>
+								<div>
+									<button class="btn btn-primary">Atualizar</button>
+									<button class="btn btn-light">Cancelar</button>
+								</div>
+							</form>
 						</div>
 					</div>
 					<div class="tab-pane fade" id="application" role="tabpanel" aria-labelledby="application-tab">
 						<h3 class="mb-4">Formas de pagamento</h3>
-						<form>
-							<div class="form-container">
-								<div class="row">
-									<div class="col-md-6">
-										<div class="form-group">
-											<label>Nome</label>
-											<input type="text" class="form-control" value="Kiran" name="first-name">
+						<button type="button" class="collapsible">Pagamento 1</button>
+						<div class="contentEndereco">
+							<form>
+								<div class="form-container">
+									<div class="row">
+										<div class="col-md-6">
+											<div class="form-group">
+												<label>Nome</label>
+												<input type="text" class="form-control" value="Kiran" name="first-name">
+											</div>
 										</div>
-									</div>
-									<div class="col-md-6">
-										<div class="form-group">
-											<label>Sobrenome</label>
-											<input type="text" class="form-control" value="Acharya" name="last-name">
+										<div class="col-md-6">
+											<div class="form-group">
+												<label>Sobrenome</label>
+												<input type="text" class="form-control" value="Acharya" name="last-name">
+											</div>
 										</div>
-									</div>
-									<div class="col-md-12">
-										<div class="form-group">
-											<label>Numero do cartão</label>
-											<input type="text" class="form-control" value="000.000.000-00" name="cvc">
+										<div class="col-md-12">
+											<div class="form-group">
+												<label>Numero do cartão</label>
+												<input type="text" class="form-control" value="000.000.000-00" name="cvc">
+											</div>
 										</div>
-									</div>
-									<div class="col-md-6">
-										<div class="form-group">
-											<label>CVV</label>
-											<input type="text" class="form-control" value="kiranacharya287@gmail.com" name="number">
+										<div class="col-md-6">
+											<div class="form-group">
+												<label>CVV</label>
+												<input type="text" class="form-control" value="kiranacharya287@gmail.com" name="number">
+											</div>
 										</div>
-									</div>
-									<div class="col-md-6">
-										<div class="form-group">
-											<label>Validade</label>
-											<input type="text" class="form-control" value="+91 9876543215" name="expiry">
+										<div class="col-md-6">
+											<div class="form-group">
+												<label>Validade</label>
+												<input type="text" class="form-control" value="+91 9876543215" name="expiry">
+											</div>
 										</div>
+										<div class="card-wrapper"></div>
 									</div>
-									<div class="card-wrapper"></div>
 								</div>
+							</form>
+							
+							<div>
+								<button class="btn btn-primary">Atualizar</button>
+								<button class="btn btn-light">Cancelar</button>
 							</div>
-						</form>
-						
-						<div>
-							<button class="btn btn-primary">Atualizar</button>
-							<button class="btn btn-light">Cancelar</button>
+						</div>
+						<hr>
+						<button type="button" class="collapsible">Pagamento 2</button>
+						<div class="contentEndereco">
+							<form>
+								<div class="form-container">
+									<div class="row">
+										<div class="col-md-6">
+											<div class="form-group">
+												<label>Nome</label>
+												<input type="text" class="form-control" value="Kiran" name="first-name">
+											</div>
+										</div>
+										<div class="col-md-6">
+											<div class="form-group">
+												<label>Sobrenome</label>
+												<input type="text" class="form-control" value="Acharya" name="last-name">
+											</div>
+										</div>
+										<div class="col-md-12">
+											<div class="form-group">
+												<label>Numero do cartão</label>
+												<input type="text" class="form-control" value="000.000.000-00" name="cvc">
+											</div>
+										</div>
+										<div class="col-md-6">
+											<div class="form-group">
+												<label>CVV</label>
+												<input type="text" class="form-control" value="kiranacharya287@gmail.com" name="number">
+											</div>
+										</div>
+										<div class="col-md-6">
+											<div class="form-group">
+												<label>Validade</label>
+												<input type="text" class="form-control" value="+91 9876543215" name="expiry">
+											</div>
+										</div>
+										<div class="card-wrapper"></div>
+									</div>
+								</div>
+							</form>
+							
+							<div>
+								<button class="btn btn-primary">Atualizar</button>
+								<button class="btn btn-light">Cancelar</button>
+							</div>
 						</div>
 					</div>
 					<div class="tab-pane fade" id="notification" role="tabpanel" aria-labelledby="notification-tab">
@@ -342,14 +453,20 @@
 	<script src="https://s3-us-west-2.amazonaws.com/s.cdpn.io/121761/jquery.card.js"></script>
 	<script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/2.1.3/jquery.min.js"></script>
 	<script>
-		$('form').card({
-			container: '.card-wrapper',
-			width: 280,
+		var coll = document.getElementsByClassName("collapsible");
+		var i;
 
-			formSelectors: {
-				nameInput: 'input[name="first-name"], input[name="last-name"]'
+		for (i = 0; i < coll.length; i++) {
+		coll[i].addEventListener("click", function() {
+			this.classList.toggle("active");
+			var content = this.nextElementSibling;
+			if (content.style.display === "block") {
+			content.style.display = "none";
+			} else {
+			content.style.display = "block";
 			}
 		});
+		}
 		</script>
 		
 </body>
