--- a/views/css/chat.css
+++ b/views/css/chat.css
@@ -1,43 +1,143 @@
-html, body {
+.container{
+  width: 100%;
   height: 100%;
+}
+
+img{ max-width:100%;}
+
+.inbox_people {
+  background: #f8f8f8 none repeat scroll 0 0;
+  float: left;
+  overflow: hidden;
+  width: 40%; border-right:1px solid #c4c4c4;
+}
+.inbox_msg {
+  border: 1px solid #c4c4c4;
+  clear: both;
   overflow: hidden;
 }
+.top_spac{ margin: 20px 0 0;}
 
-* {
+
+.recent_heading {float: left; width:40%;}
+.srch_bar {
+  display: inline-block;
+  text-align: right;
+  width: 60%;
+}
+.headind_srch{ padding:10px 29px 10px 20px; overflow:hidden; border-bottom:1px solid #c4c4c4;}
+
+.recent_heading h4 {
+  color: #05728f;
+  font-size: 21px;
+  margin: auto;
+}
+.srch_bar input{ border:1px solid #cdcdcd; border-width:0 0 1px 0; width:80%; padding:2px 0 4px 6px; background:none;}
+.srch_bar .input-group-addon button {
+  background: rgba(0, 0, 0, 0) none repeat scroll 0 0;
+  border: medium none;
+  padding: 0;
+  color: #707070;
+  font-size: 18px;
+}
+.srch_bar .input-group-addon { margin: 0 0 0 -27px;}
+
+.chat_ib h5{ font-size:15px; color:#464646; margin:0 0 8px 0;}
+.chat_ib h5 span{ font-size:13px; float:right;}
+.chat_ib p{ font-size:14px; color:#989898; margin:auto}
+.chat_img {
+  float: left;
+  width: 11%;
+}
+.chat_ib {
+  float: left;
+  padding: 0 0 0 15px;
+  width: 88%;
+}
+
+.chat_people{ overflow:hidden; clear:both;}
+.chat_list {
+  border-bottom: 1px solid #c4c4c4;
   margin: 0;
-  padding: 0;
-  box-sizing: border-box;
+  padding: 18px 16px 10px;
 }
+.inbox_chat { height: 550px; overflow-y: scroll;}
 
-button {
-  padding: 0;
-  border: none;
-  background: none;
+.active_chat{ background:#ebebeb;}
+
+.incoming_msg_img {
+  display: inline-block;
+  width: 6%;
 }
-
-#chat {
-  height: 90%;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  flex-direction: column;
-}
-
-.inputNome {
-  width: 100%;
-  border: 1px solid #ddd;
-  height: 50px;
-  padding: 0 20px;
+.received_msg {
+  display: inline-block;
+  padding: 0 0 0 10px;
+  vertical-align: top;
+  width: 92%;
+ }
+ .received_withd_msg p {
+  background: #ebebeb none repeat scroll 0 0;
+  border-radius: 3px;
+  color: #646464;
   font-size: 14px;
+  margin: 0;
+  padding: 5px 10px 5px 12px;
+  width: 100%;
+}
+.time_date {
+  color: #747474;
+  display: block;
+  font-size: 12px;
+  margin: 8px 0 0;
+}
+.received_withd_msg { width: 57%;}
+.mesgs {
+  float: left;
+  padding: 30px 15px 0 25px;
+  width: 60%;
 }
 
-.inputMessage{
-  width: 100%;
-  border: 1px solid #ddd;
-  height: 50px;
-  padding: 0 20px;
+ .sent_msg p {
+  background: #05728f none repeat scroll 0 0;
+  border-radius: 3px;
   font-size: 14px;
+  margin: 0; color:#fff;
+  padding: 5px 10px 5px 12px;
+  width:100%;
 }
+.outgoing_msg{ overflow:hidden; margin:26px 0 26px;}
+.sent_msg {
+  float: right;
+  width: 46%;
+}
+.input_msg_write input {
+  background: rgba(0, 0, 0, 0) none repeat scroll 0 0;
+  border: medium none;
+  color: #4c4c4c;
+  font-size: 15px;
+  min-height: 48px;
+  width: 100%;
+}
+
+.type_msg {border-top: 1px solid #c4c4c4;position: relative;}
+.msg_send_btn {
+  color: #fff;
+  cursor: pointer;
+  font-size: 17px;
+  height: 33px;
+  position: absolute;
+  right: 0;
+  top: 11px;
+  width: 33px;
+}
+.messaging { padding: 0 0 50px 0;}
+.msg_history {
+  height: 516px;
+  overflow-y: auto;
+}
+
+
+
 
 .flexContainer {
   display: flex;
@@ -48,6 +148,7 @@ button {
 
 
 .image-upload>input {
+  max-width: 30px;
   display: none;
 }
 
@@ -66,29 +167,17 @@ button {
 
 
 .container{
-  width: 100%;
-  height: 80%;
+  width: 80%;
+  height: 70%;
   position: relative;
 }
 
-.messages {
-  width: 100%;
-  height: 100%;            
-  position: absolute;
-  top: 0;
-  left: 0;
-  border: 1px solid #ddd;
-  padding: 20px;
-  overflow:auto;
-  overflow-x:hidden;
-}
-
 .previewImage {
-  width: 100%;
-  height: 100%;            
+  width: 60%;
+  height: 516px;            
   position: absolute;
   top: 0;
-  left: 0;
+  right: 0;
   border: 1px solid #ddd;
   padding: 20px;
   z-index: 110;
@@ -111,50 +200,6 @@ button {
   margin-top: 20px;
 }
 
-.messageEnviada {
-  display: flex; 
-  justify-content: flex-end;
-  margin-bottom: 10px;
-}
-
-.message {
-  background-color: greenyellow;
-  border-radius: 10px;
-  margin-left: 20px;
-  margin-right: 50px;
-  margin-bottom: 5px;
-  padding: 8px;
-  display:inline-block;
-  word-wrap: break-word;
-}
-.messageImg {
-  background-color: greenyellow;
-  border-radius: 10px;
-  margin-left: 20px;
-  margin-right: 50px;
-  margin-bottom: 5px;
-  padding: 3px;
-  display:inline-block;
-  word-wrap: break-word;
-}
-
-
-.novoUsuario {
-  text-align: center;
-  background-color: lightblue;
-  width: 100px;
-  margin: 20px auto;
-  border-radius: 25px;
-}
-
-.pessoasConectadas, .pessoasDigitando{
-  width: 80%;
-  font-size: 15px;
-  padding: 2px;
-  margin:0;
-  text-align: left;
-}
-
 .img{
   max-height: 250px;
   max-width: 250px;
@@ -174,10 +219,10 @@ button {
 }
 
 #fileInput{
-  position: absolute;
-  display: block;
-  opacity: 1;
-  width: 70%;
-  height: 60%;
+ position: absolute;
+ display: block;
+ opacity: 1;
+ width: 70%;
+ height: 60%;
 
- }
+}
