--- a/views/css/style.css
+++ b/views/css/style.css
@@ -26,6 +26,36 @@
 }
 
 
+/* editar perfil */
+.collapsible {
+  background-color: #777;
+  color: white;
+  cursor: pointer;
+  padding: 18px;
+  width: 100%;
+  border: none;
+  text-align: left;
+  outline: none;
+  font-size: 15px;
+}
+
+/* .active, .collapsible:hover {
+  background-color: #555;
+} */
+
+.linha{
+  margin: 5;
+  height:1;
+}
+
+.contentEndereco {
+  padding: 0 18px;
+  display: none;
+  overflow: hidden;
+  background-color: #f1f1f1;
+}
+
+
 
 
 @import url("https://fonts.googleapis.com/css?family=Roboto:300,400,500,700&display=swap");
