cadastro endereco e chat

--- a/views/Registro.html
+++ b/views/Registro.html
@@ -56,11 +56,11 @@
 							<i class="fa fa-key text-center mr-1"></i> 
 							Senha
 						</a>
-						<!-- <a class="nav-link" id="security-tab" data-toggle="pill" href="#security" role="tab" aria-controls="security" aria-selected="false">
+						<a class="nav-link" id="security-tab" data-toggle="pill" href="#security" role="tab" aria-controls="security" aria-selected="false">
 							<i class="fa fa-home text-center mr-1"></i> 
 							Endereços
 						</a>
-						<a class="nav-link" id="application-tab" data-toggle="pill" href="#application" role="tab" aria-controls="application" aria-selected="false">
+						<!-- <a class="nav-link" id="application-tab" data-toggle="pill" href="#application" role="tab" aria-controls="application" aria-selected="false">
 							<i class="fa fa-tv text-center mr-1"></i> 
 							Formas de pagamento
 						</a>
