--- a/views/Chat.html
+++ b/views/Chat.html
@@ -60,83 +60,15 @@
 					</div>
 					<div class="srch_bar">
 					  <div class="stylish-input-group">
-						<input type="text" class="search-bar"  placeholder="Search" >
+						<input type="text" class="search-bar" id="search-bar" placeholder="Search" >
 						<span class="input-group-addon">
-						<button type="button"> <i class="fa fa-search" aria-hidden="true"></i> </button>
+						<button type="button" onclick="buscarUser()"> <i class="fa fa-search" aria-hidden="true"></i> </button>
 						</span> </div>
 					</div>
 				  </div>
-				  <div class="inbox_chat">
-					<div class="chat_list active_chat">
-					  <div class="chat_people">
-						<div class="chat_img"> <img src="https://ptetutorials.com/images/user-profile.png" alt="sunil"> </div>
-						<div class="chat_ib">
-						  <h5>Sunil Rajput <span class="chat_date">Dec 25</span></h5>
-						  <p>Test, which is a new approach to have all solutions 
-							astrology under one roof.</p>
-						</div>
-					  </div>
-					</div>
-					<div class="chat_list">
-					  <div class="chat_people">
-						<div class="chat_img"> <img src="https://ptetutorials.com/images/user-profile.png" alt="sunil"> </div>
-						<div class="chat_ib">
-						  <h5>Sunil Rajput <span class="chat_date">Dec 25</span></h5>
-						  <p>Test, which is a new approach to have all solutions 
-							astrology under one roof.</p>
-						</div>
-					  </div>
-					</div>
-					<div class="chat_list">
-					  <div class="chat_people">
-						<div class="chat_img"> <img src="https://ptetutorials.com/images/user-profile.png" alt="sunil"> </div>
-						<div class="chat_ib">
-						  <h5>Sunil Rajput <span class="chat_date">Dec 25</span></h5>
-						  <p>Test, which is a new approach to have all solutions 
-							astrology under one roof.</p>
-						</div>
-					  </div>
-					</div>
-					<div class="chat_list">
-					  <div class="chat_people">
-						<div class="chat_img"> <img src="https://ptetutorials.com/images/user-profile.png" alt="sunil"> </div>
-						<div class="chat_ib">
-						  <h5>Sunil Rajput <span class="chat_date">Dec 25</span></h5>
-						  <p>Test, which is a new approach to have all solutions 
-							astrology under one roof.</p>
-						</div>
-					  </div>
-					</div>
-					<div class="chat_list">
-					  <div class="chat_people">
-						<div class="chat_img"> <img src="https://ptetutorials.com/images/user-profile.png" alt="sunil"> </div>
-						<div class="chat_ib">
-						  <h5>Sunil Rajput <span class="chat_date">Dec 25</span></h5>
-						  <p>Test, which is a new approach to have all solutions 
-							astrology under one roof.</p>
-						</div>
-					  </div>
-					</div>
-					<div class="chat_list">
-					  <div class="chat_people">
-						<div class="chat_img"> <img src="https://ptetutorials.com/images/user-profile.png" alt="sunil"> </div>
-						<div class="chat_ib">
-						  <h5>Sunil Rajput <span class="chat_date">Dec 25</span></h5>
-						  <p>Test, which is a new approach to have all solutions 
-							astrology under one roof.</p>
-						</div>
-					  </div>
-					</div>
-					<div class="chat_list">
-					  <div class="chat_people">
-						<div class="chat_img"> <img src="https://ptetutorials.com/images/user-profile.png" alt="sunil"> </div>
-						<div class="chat_ib">
-						  <h5>Sunil Rajput <span class="chat_date">Dec 25</span></h5>
-						  <p>Test, which is a new approach to have all solutions 
-							astrology under one roof.</p>
-						</div>
-					  </div>
-					</div>
+				  <div class="inbox_chat" id="inbox_chat">
+					<!-- conversas -->
+					
 				  </div>
 				</div>
 				<form id="chat">
@@ -148,7 +80,7 @@
 							<img src="" id="previewImg" class="imgPreview" alt="Prévia da imagem...">
 						</div>
 
-						<div class="type_msg">
+						<div class="type_msg" id="inputMensagem" style="display: none">
 						  <div class="input_msg_write flexContainer">
 							<input type="text" class="write_msg" placeholder="Mensagem..." id='msg' name="message"/>
 							<button class="msg_send_btn" type="submit" id="btnEnviar" style="display:none"><img src="./img/enviar.png" height="40px"></button>
