--- a/views/EditarPerfil.html
+++ b/views/EditarPerfil.html
@@ -11,7 +11,7 @@
 	<link rel="stylesheet" type="text/css" href="css/nav.css">
 	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css"/>
 	<script src="utils.js"></script>
-	
+	<script src="usuario.js"></script>
 </head>
 <body>
 
@@ -80,57 +80,65 @@
 					</div>
 				</div>
 				<div class="tab-content p-4 p-md-5" id="v-pills-tabContent">
-					<div class="tab-pane fade show active" id="account" role="tabpanel" aria-labelledby="account-tab">
+					<!-- <div class="tab-pane fade show active" id="account" role="tabpanel" aria-labelledby="account-tab">
 						<h3 class="mb-4">Configurações da conta</h3>
 						<div class="row">
 							<div class="col-md-6">
 								<div class="form-group">
+								  	<label>Username</label>
+								  	<input type="text" class="form-control" id="username">
+								</div>
+							</div>
+						</div>
+						<div class="row">
+							<div class="col-md-6">
+								<div class="form-group">
 								  	<label>Nome</label>
-								  	<input type="text" class="form-control" value="Kiran">
+								  	<input type="text" class="form-control" id="nome">
 								</div>
 							</div>
 							<div class="col-md-6">
 								<div class="form-group">
 								  	<label>Sobrenome</label>
-								  	<input type="text" class="form-control" value="Acharya">
+								  	<input type="text" class="form-control" id="sobrenome">
 								</div>
 							</div>
 							<div class="col-md-6">
 								<div class="form-group">
 								  	<label>Email</label>
-								  	<input type="text" class="form-control" value="kiranacharya287@gmail.com">
+								  	<input type="text" class="form-control" id="email">
 								</div>
 							</div>
 							<div class="col-md-6">
 								<div class="form-group">
 								  	<label>telefone</label>
-								  	<input type="text" class="form-control" value="+91 9876543215">
+								  	<input type="text" class="form-control" id="telefone">
 								</div>
 							</div>
 							<div class="col-md-6">
 								<div class="form-group">
 								  	<label>CPF</label>
-								  	<input type="text" class="form-control" value="000.000.000-00" >
+								  	<input type="text" class="form-control" id="cpf">
 								</div>
 							</div>
 							<div class="col-md-6">
 								<div class="form-group">
 								  	<label>Nascimento</label>
-								  	<input type="date" class="form-control" value="1995-03-01" id="nasimento">
+								  	<input type="date" class="form-control" id="nasimento">
 								</div>
 							</div>
 							<div class="col-md-12">
 								<div class="form-group">
 								  	<label>Bio</label>
-									<textarea class="form-control" rows="4">Lorem ipsum dolor sit amet consectetur adipisicing elit. Labore vero enim error similique quia numquam ullam corporis officia odio repellendus aperiam consequatur laudantium porro voluptatibus, itaque laboriosam veritatis voluptatum distinctio!</textarea>
+									<textarea class="form-control" rows="3" id="bio"></textarea>
 								</div>
 							</div>
 						</div>
 						<div>
-							<button class="btn btn-primary" onclick="alert(document.getElementById('nasimento').value)">Atualizar</button>
+							<button class="btn btn-primary" onclick="editarInfos()">Atualizar</button>
 							<button class="btn btn-light">Cancelar</button>
 						</div>
-					</div>
+					</div> -->
 					<div class="tab-pane fade" id="password" role="tabpanel" aria-labelledby="password-tab">
 						<h3 class="mb-4">Senha</h3>
 						<div class="row">
@@ -452,6 +460,7 @@
 	<script src="https://s3-us-west-2.amazonaws.com/s.cdpn.io/121761/card.js"></script>
 	<script src="https://s3-us-west-2.amazonaws.com/s.cdpn.io/121761/jquery.card.js"></script>
 	<script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/2.1.3/jquery.min.js"></script>
+	<script src="usuarioPreenchar.js"></script>
 	<script>
 		var coll = document.getElementsByClassName("collapsible");
 		var i;
